# crag

./: .gitignore  README.md
.github/workflows/: ci.yml
code_rag/: README.md  pyproject.toml  requirements.txt
code_rag/code_rag/: __init__.py  __main__.py  config.py  main.py  models.py
code_rag/code_rag/indexer/: __init__.py  crawler.py  db.py
code_rag/code_rag/parser/: __init__.py  engine.py  go_parser.py  py_parser.py
code_rag/code_rag/retriever/: __init__.py  generator.py  search.py
code_rag/tests/: test_cli.py  test_crawler.py  test_db.py  test_generator.py  test_py_parser.py  test_search.py
