[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-rag"
version = "0.1.0"
description = "Local AST-aware RAG CLI for codebase exploration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.6,<3.0",
  "chromadb>=0.5,<1.0",
  "tree-sitter>=0.24,<0.25",
  "tree-sitter-python>=0.23,<0.24",
  "tree-sitter-go>=0.23,<0.24",
  "google-genai>=1.0,<2.0",
  "ollama>=0.4,<1.0",
]

[project.scripts]
crag = "code_rag.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["code_rag*"]
